<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">LandCalc</string>
    <string name="legner_farms">Legner Farms</string>
    <string name="copyright">Copyright 2014</string>
    <string name="app_version">1.0</string>
    <string name="app_name_version">LandCalc 1.0</string>
    <string name="version_code">1</string>
    <string-array name="menu_array">
        <item>Auction Details</item>
        <item>Land Details</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="price_per_acre">Price/Acre ($)</string>
    <string name="total_acres">Total Acres</string>
    <string name="percent_down">Percent Down</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="length_of_loan">Length of Loan (Yrs.)</string>
    <string name="number_of_yearly_payments">Number of Yearly Payments</string>
    <string name="yearly_crp_payments">Yearly CRP Payments ($)</string>
    <string name="yearly_taxes">Yearly Taxes ($)</string>
    <string name="tillable_acres">Tillable Acres</string>
    <string name="percentage_return">% Return</string>
    <string name="total_dollars">Total Dollars</string>
    <string name="principal">Principal ($)</string>
    <string name="calculations">Calculated Values</string>
    <string name="calculate">Calculate</string>
    <string name="price_per_tillable">Price per Tillable ($)</string>
    <string name="yearly_payment">Yearly Payment ($)</string>
    <string name="down_payment">Down Payment ($)</string>
    <string name="cash_rent">Cash Rent ($)</string>
    <string name="investor_mode">Investor Mode</string>
    <string name="clear">Clear</string>
</resources>
