<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textView_total_acres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/total_acres"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editText_total_acres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView_tillable_acres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/tillable_acres"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editText_tillable_acres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:typeface="sans" />


        <TextView
            android:id="@+id/textView_yearly_crp_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/yearly_crp_payments"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editText_yearly_crp_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:typeface="sans" />
        
         <TextView
            android:id="@+id/textView_yearly_taxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/yearly_taxes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editText_yearly_taxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView_number_of_yearly_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/number_of_yearly_payments"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_number_of_yearly_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:typeface="sans"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/button_land_details_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:paddingTop="5dp"
            android:text="@string/clear"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>
    

</ScrollView>
