<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/textView_price_per_acre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_per_acre"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_price_per_acre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_percent_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/percent_down"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_percent_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_length_of_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/length_of_loan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_length_of_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_interest_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/interest_rate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_interest_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_percentage_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/percentage_return"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_percentage_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <Switch
                android:id="@+id/switch_investor_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/investor_mode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/textView_calculations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/calculations"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/textView_price_per_tillable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/price_per_tillable"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_price_per_tillable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_yearly_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/yearly_payment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_yearly_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_down_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/down_payment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_down_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_cash_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/cash_rent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/editText_cash_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:typeface="sans" />

            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >
            
            <Button
                android:id="@+id/button_calc_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.48"
                android:paddingTop="5dp"
                android:text="@string/clear"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_weight="0.48"
                android:paddingTop="5dp"
                android:text="@string/calculate"
                android:textStyle="bold"
                android:typeface="sans" />
            
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>